<resources>
    <string name="app_name">Baby Needs</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="enter_item">Enter Item</string>
    <string name="hint_item">Item</string>
    <string name="hint_qty">Quantity</string>
    <string name="hint_color">Color</string>
    <string name="hint_size">Size</string>
    <string name="saveButton">Save</string>
    <string name="hint_date">Date</string>
    <string name="editButton">Edit</string>
    <string name="alert_delete">Are you sure ?</string>
    <string name="delete">Yes</string>
    <string name="conf">Yes</string>
    <string name="deleteNo">No</string>
</resources>