<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/layout_id"
    tools:ignore="InvalidId">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#EC744E"
            android:padding="24dp">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/enter_item"
                android:textSize="18dp"
                android:textStyle="italic"

                />


            <EditText
                android:id="@+id/babyItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/title"
                android:layout_marginTop="23dp"
                android:hint="@string/hint_item"
                tools:ignore="UnknownId"
                android:cursorVisible="true"
                android:textCursorDrawable="@null"

                />

            <EditText
                android:id="@+id/itemQuantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/babyItem"
                android:layout_marginTop="12dp"
                android:hint="@string/hint_qty"
                android:inputType="number"
                tools:ignore="UnknownId"
                android:cursorVisible="true"
                android:textCursorDrawable="@null"/>

            <EditText
                android:id="@+id/itemColor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/itemQuantity"
                android:layout_marginTop="20dp"
                android:hint="@string/hint_color"
                tools:ignore="UnknownId"
                android:cursorVisible="true"
                android:textCursorDrawable="@null"/>

            <EditText
                android:id="@+id/itemSize"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/itemColor"
                android:layout_marginTop="17dp"
                android:hint="@string/hint_size"
                tools:ignore="UnknownId"
                android:cursorVisible="true"
                android:textCursorDrawable="@null"/>

            <Button
                android:id="@+id/saveButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/itemSize"
                android:layout_marginTop="22dp"
                android:layout_marginBottom="30dp"
                android:text="@string/saveButton"
                android:background="#E86B43"
                />

        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>