<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/alert_text"
                android:text="@string/alert_delete"
                android:layout_centerHorizontal="true"
                android:padding="6dp"
                android:textStyle="bold"
                android:textSize="20sp"/>

            <Button
                android:id="@+id/conf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#F1754E"
                android:text="@string/delete"
                android:textColor="#DAD9DC"
                android:layout_below="@id/alert_text"
                android:layout_marginTop="20dp"/>

            <Button
                android:id="@+id/noDelete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#F1754E"
                android:text="@string/deleteNo"
                android:textColor="#DAD9DC"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_below="@id/alert_text"
                android:layout_marginTop="20dp"/>
        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>