<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        app:cardBackgroundColor="#EF7B56"
        app:cardElevation="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        app:cardCornerRadius="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="15dp">


            <TextView
                android:id="@+id/item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="4dp"
                android:text="@string/hint_item"
                android:textSize="18sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/item_qty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/item"
                android:paddingTop="4dp"
                android:text="@string/hint_qty"
                android:textSize="18sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/item_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/item_qty"
                android:paddingTop="4dp"
                android:text="@string/hint_size"
                android:textSize="18sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/item_color"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/item_size"
                android:paddingTop="4dp"
                android:text="@string/hint_color"
                android:textSize="18sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/item_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/item_color"
                android:paddingTop="4dp"
                android:text="@string/hint_date"
                android:textSize="18sp"
                android:textStyle="italic" />

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/item_date"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">


                <Button
                    android:id="@+id/editButton"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginRight="15dp"
                    android:background="@android:drawable/ic_menu_edit" />

                <Button
                    android:id="@+id/deleteButton"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginRight="15dp"
                    android:background="@android:drawable/ic_menu_delete" />

            </TableRow>


        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>